--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "postcss": "^8.4.33",
         "postcss-import": "^16.0.0",
         "prettier": "^3.2.4",
+        "replace-in-file": "^7.1.0",
         "sass": "^1.70.0",
         "tailwindcss": "^3.4.1",
         "typescript": "^5.3.3",
