--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
         "start": "vite",
         "build": "tsc && vite build",
         "serve": "vite preview",
-        "lint": "eslint"
+        "lint": "eslint",
+        "cli": "shadcn-ui"
     },
     "dependencies": {
         "@types/node": "^20.11.25",
         "@types/react-dom": "^18.2.21",
+        "clsx": "^2.1.0",
+        "lucide-react": "^0.354.0",
         "material-icons": "^1.13.12",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
@@ -24,6 +27,7 @@
         "@typescript-eslint/parser": "^6.21.0",
         "@vitejs/plugin-react": "^4.2.1",
         "autoprefixer": "^10.4.18",
+        "class-variance-authority": "^0.7.0",
         "eslint": "^8.57.0",
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-import": "^2.29.1",
@@ -36,7 +40,10 @@
         "prettier": "^3.2.5",
         "replace-in-file": "^7.1.0",
         "sass": "^1.71.1",
+        "shadcn-ui": "^0.8.0",
+        "tailwind-merge": "^2.2.1",
         "tailwindcss": "^3.4.1",
+        "tailwindcss-animate": "^1.0.7",
         "typescript": "^5.4.2",
         "vite": "^5.1.5"
     }
