--- a/components.json
+++ b/components.json
@@ -5,7 +5,7 @@
   "tsx": true,
   "tailwind": {
     "config": "tailwind.config.js",
-    "css": "src/index.scss",
+    "css": "src/assets/css/3p/tailwind.scss",
     "baseColor": "neutral",
     "cssVariables": true,
     "prefix": ""
