shadcn-ui additions / radix-ui

--- a/.eslintrc
+++ b/.eslintrc
@@ -33,5 +33,7 @@
         "plugin:react-hooks/recommended",
         "prettier"
     ],
-    "rules": {}
+    "rules": {
+        "react/prop-types": "off"
+    }
 }
