--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@radix-ui/react-dialog": "^1.0.5",
         "@radix-ui/react-dropdown-menu": "^2.0.6",
         "@radix-ui/react-hover-card": "^1.0.7",
+        "@radix-ui/react-icons": "^1.3.0",
         "@radix-ui/react-label": "^2.0.2",
         "@radix-ui/react-menubar": "^1.0.4",
         "@radix-ui/react-navigation-menu": "^1.1.4",
@@ -40,8 +41,8 @@
         "@radix-ui/react-toggle": "^1.0.3",
         "@radix-ui/react-toggle-group": "^1.0.4",
         "@radix-ui/react-tooltip": "^1.0.7",
-        "@types/node": "^20.11.25",
-        "@types/react-dom": "^18.2.21",
+        "@types/node": "^20.11.26",
+        "@types/react-dom": "^18.2.22",
         "clsx": "^2.1.0",
         "cmdk": "^1.0.0",
         "date-fns": "^3.4.0",
@@ -60,8 +61,8 @@
     },
     "devDependencies": {
         "@nabla/vite-plugin-eslint": "^2.0.2",
-        "@typescript-eslint/eslint-plugin": "^7.1.1",
-        "@typescript-eslint/parser": "^7.1.1",
+        "@typescript-eslint/eslint-plugin": "^7.2.0",
+        "@typescript-eslint/parser": "^7.2.0",
         "@vitejs/plugin-react": "^4.2.1",
         "autoprefixer": "^10.4.18",
         "class-variance-authority": "^0.7.0",
