--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dependencies": {
         "@types/node": "^20.11.30",
         "@types/react-dom": "^18.2.22",
+        "axios": "^1.6.8",
         "material-icons": "^1.13.12",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
