--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@types/node": "^20.11.30",
         "@types/react-dom": "^18.2.22",
         "axios": "^1.6.8",
+        "browser-cookies": "^1.2.0",
         "file-saver": "^2.0.5",
         "material-icons": "^1.13.12",
         "mime": "^4.0.3",
