--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,6 +9,14 @@ jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
+    env:
+      FB_API_KEY: ${{ secrets.FB_API_KEY }}
+      FB_AUTH_DOMAIN: ${{ secrets.FB_AUTH_DOMAIN }}
+      FB_PROJECT_ID: ${{ secrets.FB_PROJECT_ID }}
+      FB_STORAGE_BUCKET: ${{ secrets.FB_STORAGE_BUCKET }}
+      FB_MESSAGING_SENDER_ID: ${{ secrets.FB_MESSAGING_SENDER_ID }}
+      FB_APP_ID: ${{ secrets.FB_APP_ID }}
+      FB_MEASUREMENT_ID: ${{ secrets.FB_MEASUREMENT_ID }}
 
     steps:
       - name: Checkout repo
@@ -49,3 +57,4 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./dist
+       
